feat(web): new layout!
