# src/server/public/swagger.json
@@ -341,6 +341,10 @@
 						},
 						"type": "array"
 					},
+					"outletId": {
+						"type": "number",
+						"format": "double"
+					},
 					"url": {
 						"type": "string"
 					},
@@ -357,6 +361,7 @@
 					"category",
 					"subcategory",
 					"tags",
+					"outletId",
 					"url",
 					"originalTitle"
 				],
@@ -364,6 +369,24 @@
 			},
 			"SourceAttr": {
 				"$ref": "#/components/schemas/Attr_Source.typeofSOURCE_ATTRS-at-number_"
+			},
+			"SourceWithOutletAttr": {
+				"allOf": [
+					{
+						"$ref": "#/components/schemas/SourceAttr"
+					},
+					{
+						"properties": {
+							"outletName": {
+								"type": "string"
+							}
+						},
+						"required": [
+							"outletName"
+						],
+						"type": "object"
+					}
+				]
 			},
 			"SourceAttributes": {
 				"allOf": [
@@ -383,13 +406,36 @@
 							},
 							"url": {
 								"type": "string"
+							},
+							"outletId": {
+								"type": "number",
+								"format": "double"
 							}
 						},
 						"required": [
 							"originalTitle",
 							"filteredText",
 							"rawText",
-							"url"
+							"url",
+							"outletId"
+						],
+						"type": "object"
+					}
+				]
+			},
+			"SourceWithOutletName": {
+				"allOf": [
+					{
+						"$ref": "#/components/schemas/SourceAttributes"
+					},
+					{
+						"properties": {
+							"outletName": {
+								"type": "string"
+							}
+						},
+						"required": [
+							"outletName"
 						],
 						"type": "object"
 					}
@@ -869,7 +915,7 @@
 									"properties": {
 										"rows": {
 											"items": {
-												"$ref": "#/components/schemas/SourceAttr"
+												"$ref": "#/components/schemas/SourceWithOutletAttr"
 											},
 											"type": "array"
 										},
@@ -906,7 +952,7 @@
 						"name": "pageSize",
 						"required": false,
 						"schema": {
-							"default": 10,
+							"default": 1,
 							"format": "double",
 							"type": "number"
 						}
@@ -940,7 +986,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/SourceAttributes"
+									"$ref": "#/components/schemas/SourceWithOutletName"
 								}
 							}
 						}
@@ -975,7 +1021,7 @@
 									"properties": {
 										"rows": {
 											"items": {
-												"$ref": "#/components/schemas/SourceAttr"
+												"$ref": "#/components/schemas/SourceWithOutletAttr"
 											},
 											"type": "array"
 										},
@@ -1059,7 +1105,7 @@
 									"properties": {
 										"rows": {
 											"items": {
-												"$ref": "#/components/schemas/SourceAttr"
+												"$ref": "#/components/schemas/SourceWithOutletAttr"
 											},
 											"type": "array"
 										},
@@ -1148,7 +1194,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/SourceAttributes"
+									"$ref": "#/components/schemas/SourceWithOutletName"
 								}
 							}
 						}
